--- a/pkg/admin/gui/front-end/html/sidebar.html
+++ b/pkg/admin/gui/front-end/html/sidebar.html
@@ -2,7 +2,7 @@
 <div id="appSidebar" class="collapse collapse-horizontal show" hidden>
   <nav class="sidebar d-flex flex-column flex-shrink-0 p-3 bg-white border-end h-100">
     {{ if or (contains .myPermission.Servers "r") (contains .myPermission.Partners "r") (contains .myPermission.Administration "r") }}
-        <div class="mb-2">
+        <div class="mb-1.5">
             <button class="btn btn-toggle align-items-center rounded w-100 text-start {{ if eq $.sidebarSection "connection" }}current{{ end }}" data-bs-toggle="collapse" data-bs-target="#sec-connection" aria-expanded="true">
                 {{ index .tab "connection_settings" }}
             </button>
@@ -24,7 +24,7 @@
             </div>
         </div>
     {{ end }}
-    <div class="mb-2">
+    <div class="mb-1.5">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start {{ if eq $.sidebarSection "treatment" }}current{{ end }}" data-bs-toggle="collapse" data-bs-target="#sec-treatment" aria-expanded="true">
             {{ index .tab "treatment_settings" }}
         </button>
@@ -34,10 +34,12 @@
                 <li><i class="bi bi-shuffle fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0 {{ if eq $.sidebarLink "transfer_rules_management" }}active{{ end }}" href="transfer_rules_management">{{ index .tab "transfer_rules_management" }}</a></li>
             {{ end }}
             <li><i class="bi bi-key-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="cryptographic_key_management">{{ index .tab "cryptographic_key_management" }}</a></li>
+            <li><i class="bi bi-envelope-at-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="smtp_credentials_management">{{ index .tab "smtp_credentials_management" }}</a></li>
+            <li><i class="bi bi-file-earmark-text-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="email_templates_management">{{ index .tab "email_templates_management" }}</a></li>
         </ul>
         </div>
     </div>
-    <div class="mb-2">
+    <div class="mb-1.5">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start" data-bs-toggle="collapse" data-bs-target="#sec-monitoring" aria-expanded="true">
             {{ index .tab "monitoring" }}
         </button>
@@ -53,7 +55,7 @@
         </ul>
         </div>
     </div>
-    <div class="mb-2">
+    <div class="mb-1.5">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start" data-bs-toggle="collapse" data-bs-target="#sec-admin" aria-expanded="true">
             {{ index .tab "administration" }}
         </button>
