--- a/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
+++ b/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
@@ -79,7 +79,7 @@
                   <div class="input-group mb-2">
                       <input type="text" name="optionsKey[]" class="form-control" value="{{ $k }}" placeholder="{{ index $.tab "fieldName" }}">
                       <input type="text" name="optionsValue[]" class="form-control" value="{{ if $vals }}{{ index $vals $i }}{{ end }}" placeholder="{{ index $.tab "value" }}">
-                    <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeFieldCloudOptions(this)">
+                    <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                         <i class="bi bi-trash"></i>
                       </button>
                   </div>
@@ -88,13 +88,13 @@
                   <div class="input-group mb-2">
                     <input type="text" name="optionsKey[]" class="form-control" placeholder="{{ index $.tab "fieldName" }}">
                     <input type="text" name="optionsValue[]" class="form-control" placeholder="{{ index $.tab "value" }}">
-                    <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeFieldCloudOptions(this)">
+                    <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                       <i class="bi bi-trash"></i>
                     </button>
                   </div>
                 {{ end }}
                 </div>
-              <button type="button" class="btn btn-outline-primary btn-sm" onclick="addFieldCloudOptions(this)">{{ index .tab "add" }}</button>
+              <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this)">{{ index .tab "add" }}</button>
             </div>
           </div>
           <div class="modal-footer">
@@ -294,7 +294,7 @@
                                     <div class="input-group mb-2">
                                       <input type="text" name="editOptionsKey[]" class="form-control" value="{{ $k }}">
                                       <input type="text" name="editOptionsValue[]" class="form-control" value="{{ if $vals }}{{ index $vals $i }}{{ end }}">
-                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeFieldCloudOptions(this)">
+                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                                         <i class="bi bi-trash"></i>
                                       </button>
                                     </div>
@@ -303,7 +303,7 @@
                                     <div class="input-group mb-2">
                                       <input type="text" name="editOptionsKey[]" class="form-control">
                                       <input type="text" name="editOptionsValue[]" class="form-control">
-                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeFieldCloudOptions(this)">
+                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                                         <i class="bi bi-trash"></i>
                                       </button>
                                     </div>
@@ -313,14 +313,14 @@
                                       <div class="input-group mb-2">
                                         <input type="text" name="editOptionsKey[]" class="form-control" value="{{ $key }}">
                                         <input type="text" name="editOptionsValue[]" class="form-control" value="{{ $value }}">
-                                        <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeFieldCloudOptions(this)">
+                                        <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                                           <i class="bi bi-trash"></i>
                                         </button>
                                       </div>
                                     {{ end }}
                                   {{ end }}
                                 </div>
-                            <button type="button" class="btn btn-outline-primary btn-sm" onclick="addFieldCloudOptions(this)">
+                            <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this)">
                                 {{ index $.tab "add" }}
                             </button>
                           </div>
