--- a/pkg/admin/gui/front-end/html/home_page.html
+++ b/pkg/admin/gui/front-end/html/home_page.html
@@ -76,6 +76,22 @@
         </div>
       </a>
     </div>
+    <div class="col-sm-4">
+      <a href="smtp_credentials_management" class="text-decoration-none text-dark">
+        <div class="card text-center p-3">
+          <i class="bi bi-envelope-at-fill fs-2"></i>
+          <div>{{ index .tab "smtp_credentials_management" }}</div>
+        </div>
+      </a>
+    </div>
+    <div class="col-sm-4">
+      <a href="email_templates_management" class="text-decoration-none text-dark">
+        <div class="card text-center p-3">
+          <i class="bi bi-file-earmark-text-fill fs-2"></i>
+          <div>{{ index .tab "email_templates_management" }}</div>
+        </div>
+      </a>
+    </div>
   </div>
 </section>
 
