--- a/pkg/admin/gui/front-end/html/remote_account_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/remote_account_authentication_page.html
@@ -162,7 +162,11 @@
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-body text-break">
-                                        {{ .Value }}
+                                        {{ if eq (displayOrDefault .Value (index $.tab "undefined")) (index $.tab "undefined") }}
+                                            <span class="input-undefined">{{ displayOrDefault .Value (index $.tab "undefined") }}</span>
+                                        {{ else }}
+                                            {{ .Value }}
+                                        {{ end }}
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +182,11 @@
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-body text-break">
-                                        {{ .Value2 }}
+                                        {{ if eq (displayOrDefault .Value2 (index $.tab "undefined")) (index $.tab "undefined") }}
+                                            <span class="input-undefined">{{ displayOrDefault .Value2 (index $.tab "undefined") }}</span>
+                                        {{ else }}
+                                            {{ .Value2 }}
+                                        {{ end }}
                                     </div>
                                 </div>
                             </div>
