--- a/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
+++ b/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
@@ -74,6 +74,7 @@
                             <optgroup label="{{ index .tab "network" }}">
                                 {{ range .taskTypes }}
                                     {{ if eq . "ICAP" }}<option value="ICAP" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPreTaskType") "ICAP" }}selected{{ end }}{{ end }}>ICAP (Beta)</option>{{ end }}
+                                    {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPreTaskType") "EMAIL" }}selected{{ end }}{{ end }}>Email</option>{{ end }}
                                 {{ end }}
                             </optgroup>
                             <optgroup label="{{ index .tab "cryptographicTask" }}">
@@ -102,6 +103,7 @@
                     {{ template "addTaskARCHIVE" . }}
                     {{ template "addTaskEXTRACT" . }}
                     {{ template "addTaskICAP" . }}
+                    {{ template "addTaskEMAIL" . }}
                     {{ template "addTaskENCRYPT" . }}
                     {{ template "addTaskDECRYPT" . }}
                     {{ template "addTaskSIGN" . }}
@@ -150,6 +152,7 @@
                     {{ if eq .Type "ARCHIVE" }}Archive{{ end }}
                     {{ if eq .Type "EXTRACT" }}Extract{{ end }}
                     {{ if eq .Type "ICAP" }}ICAP (BETA){{ end }}
+                    {{ if eq .Type "EMAIL" }}Email{{ end }}
                     {{ if eq .Type "ENCRYPT" }}Encrypt{{ end }}
                     {{ if eq .Type "DECRYPT" }}Decrypt{{ end }}
                     {{ if eq .Type "SIGN" }}Sign{{ end }}
@@ -197,6 +200,9 @@
                         {{ end }}
                         {{ if eq .Type "ICAP" }}
                             {{ index $.tab "uploadURL" }}: {{ index .Args "uploadURL" }}
+                        {{ end }}
+                        {{ if eq .Type "EMAIL" }}
+                            {{ index $.tab "sender" }}: {{ index .Args "sender" }}
                         {{ end }}
                         {{ if eq .Type "ENCRYPT" }}
                             {{ index $.tab "method" }}: {{ index .Args "method" }}
@@ -270,6 +276,9 @@
                                     {{ end }}
                                     {{ if eq .Type "ICAP" }}
                                         {{ template "displayTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" .Args) }}
+                                    {{ end }}
+                                    {{ if eq .Type "EMAIL" }}
+                                        {{ template "displayTaskEMAIL" (dict "tab" $.tab "Args" .Args) }}
                                     {{ end }}
                                     {{ if eq .Type "ENCRYPT" }}
                                         {{ template "displayTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "Args" .Args) }}
@@ -355,6 +364,7 @@
                                                 <optgroup label="{{ index $.tab "network" }}">
                                                     {{ range $.taskTypes }}
                                                         {{ if eq . "ICAP" }}<option value="ICAP" {{ if $me }}{{ if eq (index $me "editPreTaskType") "ICAP" }}selected{{ end }}{{ else if eq $current.Type "ICAP" }}selected{{ end }}>ICAP (Beta)</option>{{ end }}
+                                                        {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $me }}{{ if eq (index $me "editPreTaskType") "EMAIL" }}selected{{ end }}{{ else if eq $current.Type "EMAIL" }}selected{{ end }}>Email</option>{{ end }}
                                                     {{ end }}
                                                 </optgroup>
                                                 <optgroup label="{{ index $.tab "cryptographicTask" }}">
@@ -378,11 +388,12 @@
                                         {{ template "editTaskMOVE" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskMOVERENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskRENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
-                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listClient" $.listClient "listPartner" $.listPartner) }}
                                         {{ template "editTaskTRANSCODE" (dict "tab" $.tab "TranscodeFormats" $.TranscodeFormats "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskARCHIVE" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "CompressionLevelList" $.CompressionLevelList "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskEXTRACT" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskEMAIL" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listSMTP" $.listSMTP "listTmplEmail" $.listTmplEmail) }}
                                         {{ template "editTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "EncryptKeyTypes" $.EncryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskDECRYPT" (dict "tab" $.tab "DecryptMethods" $.DecryptMethods "DecryptKeyTypes" $.DecryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskSIGN" (dict "tab" $.tab "SignMethods" $.SignMethods "SignKeyTypes" $.SignKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
@@ -468,6 +479,7 @@
                             <optgroup label="{{ index .tab "network" }}">
                                 {{ range .taskTypes }}
                                     {{ if eq . "ICAP" }}<option value="ICAP" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPostTaskType") "ICAP" }}selected{{ end }}{{ end }}>ICAP (Beta)</option>{{ end }}
+                                    {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPostTaskType") "EMAIL" }}selected{{ end }}{{ end }}>Email</option>{{ end }}
                                 {{ end }}
                             </optgroup>
                             <optgroup label="{{ index .tab "cryptographicTask" }}">
@@ -496,6 +508,7 @@
                     {{ template "addTaskARCHIVE" . }}
                     {{ template "addTaskEXTRACT" . }}
                     {{ template "addTaskICAP" . }}
+                    {{ template "addTaskEMAIL" . }}
                     {{ template "addTaskENCRYPT" . }}
                     {{ template "addTaskDECRYPT" . }}
                     {{ template "addTaskSIGN" . }}
@@ -544,6 +557,7 @@
                     {{ if eq .Type "ARCHIVE" }}Archive{{ end }}
                     {{ if eq .Type "EXTRACT" }}Extract{{ end }}
                     {{ if eq .Type "ICAP" }}ICAP (BETA){{ end }}
+                    {{ if eq .Type "EMAIL" }}Email{{ end }}
                     {{ if eq .Type "ENCRYPT" }}Encrypt{{ end }}
                     {{ if eq .Type "DECRYPT" }}Decrypt{{ end }}
                     {{ if eq .Type "SIGN" }}Sign{{ end }}
@@ -591,6 +605,9 @@
                         {{ end }}
                         {{ if eq .Type "ICAP" }}
                             {{ index $.tab "uploadURL" }}: {{ index .Args "uploadURL" }}
+                        {{ end }}
+                        {{ if eq .Type "EMAIL" }}
+                            {{ index $.tab "sender" }}: {{ index .Args "sender" }}
                         {{ end }}
                         {{ if eq .Type "ENCRYPT" }}
                             {{ index $.tab "method" }}: {{ index .Args "method" }}
@@ -664,6 +681,9 @@
                                     {{ end }}
                                     {{ if eq .Type "ICAP" }}
                                         {{ template "displayTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" .Args) }}
+                                    {{ end }}
+                                    {{ if eq .Type "EMAIL" }}
+                                        {{ template "displayTaskEMAIL" (dict "tab" $.tab "Args" .Args) }}
                                     {{ end }}
                                     {{ if eq .Type "ENCRYPT" }}
                                         {{ template "displayTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "Args" .Args) }}
@@ -749,6 +769,7 @@
                                                 <optgroup label="{{ index $.tab "network" }}">
                                                     {{ range $.taskTypes }}
                                                         {{ if eq . "ICAP" }}<option value="ICAP" {{ if $me }}{{ if eq (index $me "editPostTaskType") "ICAP" }}selected{{ end }}{{ else if eq $current.Type "ICAP" }}selected{{ end }}>ICAP (Beta)</option>{{ end }}
+                                                        {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $me }}{{ if eq (index $me "editPostTaskType") "EMAIL" }}selected{{ end }}{{ else if eq $current.Type "EMAIL" }}selected{{ end }}>Email</option>{{ end }}
                                                     {{ end }}
                                                 </optgroup>
                                                 <optgroup label="{{ index $.tab "cryptographicTask" }}">
@@ -772,11 +793,12 @@
                                         {{ template "editTaskMOVE" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskMOVERENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskRENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
-                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listClient" $.listClient "listPartner" $.listPartner) }}
                                         {{ template "editTaskTRANSCODE" (dict "tab" $.tab "TranscodeFormats" $.TranscodeFormats "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskARCHIVE" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "CompressionLevelList" $.CompressionLevelList "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskEXTRACT" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskEMAIL" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listSMTP" $.listSMTP "listTmplEmail" $.listTmplEmail) }}
                                         {{ template "editTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "EncryptKeyTypes" $.EncryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskDECRYPT" (dict "tab" $.tab "DecryptMethods" $.DecryptMethods "DecryptKeyTypes" $.DecryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskSIGN" (dict "tab" $.tab "SignMethods" $.SignMethods "SignKeyTypes" $.SignKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
@@ -862,6 +884,7 @@
                             <optgroup label="{{ index .tab "network" }}">
                                 {{ range .taskTypes }}
                                     {{ if eq . "ICAP" }}<option value="ICAP" {{ if $.modalElement }}{{ if eq (index $.modalElement "addErrorTaskType") "ICAP" }}selected{{ end }}{{ end }}>ICAP (Beta)</option>{{ end }}
+                                    {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $.modalElement }}{{ if eq (index $.modalElement "addErrorTaskType") "EMAIL" }}selected{{ end }}{{ end }}>Email</option>{{ end }}
                                 {{ end }}
                             </optgroup>
                             <optgroup label="{{ index .tab "cryptographicTask" }}">
@@ -890,6 +913,7 @@
                     {{ template "addTaskARCHIVE" . }}
                     {{ template "addTaskEXTRACT" . }}
                     {{ template "addTaskICAP" . }}
+                    {{ template "addTaskEMAIL" . }}
                     {{ template "addTaskENCRYPT" . }}
                     {{ template "addTaskDECRYPT" . }}
                     {{ template "addTaskSIGN" . }}
@@ -938,6 +962,7 @@
                     {{ if eq .Type "ARCHIVE" }}Archive{{ end }}
                     {{ if eq .Type "EXTRACT" }}Extract{{ end }}
                     {{ if eq .Type "ICAP" }}ICAP (BETA){{ end }}
+                    {{ if eq .Type "EMAIL" }}Email{{ end }}
                     {{ if eq .Type "ENCRYPT" }}Encrypt{{ end }}
                     {{ if eq .Type "DECRYPT" }}Decrypt{{ end }}
                     {{ if eq .Type "SIGN" }}Sign{{ end }}
@@ -985,6 +1010,9 @@
                         {{ end }}
                         {{ if eq .Type "ICAP" }}
                             {{ index $.tab "uploadURL" }}: {{ index .Args "uploadURL" }}
+                        {{ end }}
+                        {{ if eq .Type "EMAIL" }}
+                            {{ index $.tab "sender" }}: {{ index .Args "sender" }}
                         {{ end }}
                         {{ if eq .Type "ENCRYPT" }}
                             {{ index $.tab "method" }}: {{ index .Args "method" }}
@@ -1058,6 +1086,9 @@
                                     {{ end }}
                                     {{ if eq .Type "ICAP" }}
                                         {{ template "displayTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" .Args) }}
+                                    {{ end }}
+                                    {{ if eq .Type "EMAIL" }}
+                                        {{ template "displayTaskEMAIL" (dict "tab" $.tab "Args" .Args) }}
                                     {{ end }}
                                     {{ if eq .Type "ENCRYPT" }}
                                         {{ template "displayTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "Args" .Args) }}
@@ -1143,6 +1174,7 @@
                                                 <optgroup label="{{ index $.tab "network" }}">
                                                     {{ range $.taskTypes }}
                                                         {{ if eq . "ICAP" }}<option value="ICAP" {{ if $me }}{{ if eq (index $me "editErrorTaskType") "ICAP" }}selected{{ end }}{{ else if eq $current.Type "ICAP" }}selected{{ end }}>ICAP (Beta)</option>{{ end }}
+                                                        {{ if eq . "EMAIL" }}<option value="EMAIL" {{ if $me }}{{ if eq (index $me "editErrorTaskType") "EMAIL" }}selected{{ end }}{{ else if eq $current.Type "EMAIL" }}selected{{ end }}>Email</option>{{ end }}
                                                     {{ end }}
                                                 </optgroup>
                                                 <optgroup label="{{ index $.tab "cryptographicTask" }}">
@@ -1166,11 +1198,12 @@
                                         {{ template "editTaskMOVE" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskMOVERENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskRENAME" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
-                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskTRANSFER" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listClient" $.listClient "listPartner" $.listPartner) }}
                                         {{ template "editTaskTRANSCODE" (dict "tab" $.tab "TranscodeFormats" $.TranscodeFormats "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskARCHIVE" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "CompressionLevelList" $.CompressionLevelList "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskEXTRACT" (dict "tab" $.tab "ArchiveExtensions" $.ArchiveExtensions "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskICAP" (dict "tab" $.tab "IcapOnErrorOptions" $.IcapOnErrorOptions "Args" $current.Args "modalElement" $me) }}
+                                        {{ template "editTaskEMAIL" (dict "tab" $.tab "Args" $current.Args "modalElement" $me "listSMTP" $.listSMTP "listTmplEmail" $.listTmplEmail) }}
                                         {{ template "editTaskENCRYPT" (dict "tab" $.tab "EncryptMethods" $.EncryptMethods "EncryptKeyTypes" $.EncryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskDECRYPT" (dict "tab" $.tab "DecryptMethods" $.DecryptMethods "DecryptKeyTypes" $.DecryptKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
                                         {{ template "editTaskSIGN" (dict "tab" $.tab "SignMethods" $.SignMethods "SignKeyTypes" $.SignKeyTypes "listAesKey" $.listAesKey "listHmacKey" $.listHmacKey "listPgpPubKey" $.listPgpPubKey "listPgpPrivKey" $.listPgpPrivKey "Args" $current.Args "modalElement" $me) }}
